--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,43 +8,72 @@
 </head>
 <body>
   <div>
-    <section class="hero">
+    <section class="main">
       <div class="text">
-        <h1>Smarter Learning<br>For A Brighter Future!</h1>
-        <p>Ace your academic and job exams with expert-crafted MCQs, model tests, and personalized learning tools.</p>
-        <button class="cta">Start Learning</button>
+        <h1>Learn Networking and Servers</h1>
+        <p id="ones">A complete guide to building, securing, and managing networks</p>
+        <button class="btn">Start Learning</button>
       </div>
+
       <div class="image">
         <img src="assets/cp-removebg-preview.png" alt="Learning Illustration" />
       </div>
-    </section>
 
-    <section class="info">
-      <h2>KT1201: Peer-to-Peer and Client-Server Networks</h2>
-      <p><strong>Client-Server:</strong> Central server provides services and data. High security, better for large networks.</p>
-      <p><strong>Peer-to-Peer:</strong> Devices act as both client and server. Low cost, best for small setups.</p>
+      <div class="box">
+        <div class="text2"><p>What are networks and servers?</p></div>
+        <div class="text3">
+          <p id="two">A network is a group of connected computers and devices that share data, and a server provides services or data to other computers known as clients.</p>
+        </div>
+      </div>
 
-      <h2>KT1202: Server Network Functionality</h2>
-      <ul>
-        <li>Store and share files</li>
-        <li>Run centralized apps</li>
-        <li>Manage printers and emails</li>
-        <li>Host intranet</li>
-        <li>Enable remote access (VPN)</li>
-      </ul>
-      <p><strong>Cloud Servers:</strong> Provide the same features with added flexibility and cost efficiency.</p>
+      <div class="boxes">
+        <div class="box2 card">
+          <p id="two">Wi-Fi USB Dongles</p>
+          <img src="assets/usb2-removebg-preview.png" height="100" alt="Wi-Fi USB Dongle">
+          <p id="one">A small device plugged into a computer's USB port to give wireless internet access.</p>
+          <button>Learn More</button>
+        </div>
 
-      <h2>KT1203: Networking Devices</h2>
-      <ul>
-        <li><strong>NIC:</strong> Connects computer to network</li>
-        <li><strong>Repeater:</strong> Regenerates weak signals</li>
-        <li><strong>Hub:</strong> Multiport repeater</li>
-        <li><strong>Bridge:</strong> Connects LANs, filters by MAC</li>
-        <li><strong>Switch:</strong> Multiport smart bridge</li>
-        <li><strong>Router:</strong> Routes IP packets, connects networks</li>
-        <li><strong>Gateway:</strong> Protocol converter</li>
-        <li><strong>Brouter:</strong> Bridge + Router</li>
-      </ul>
+        <div class="box2 card">
+          <p id="two">Secure Online Collaboration</p>
+          <img src="assets/secure-removebg-preview.png" height="100" alt="Secure Collaboration">
+          <p id="one">The use of encrypted tools and platforms for safe file sharing—like End-to-End Encryption.</p>
+          <button>Learn More</button>
+        </div>
+      </div>
+
+      <div class="box3">
+        <p id="two">Types and Functions of Networking and Wireless Connections</p>
+        <div class="boxe">
+          <div class="box1 card">
+            <p id="two">PAN (Personal Area Network)</p>
+            <img src="assets/PAN-removebg-preview.png" height="100" alt="PAN Image">
+            <p id="one">Connects devices in a small area like your home. It's fast and secure.</p>
+            <button>Learn More</button>
+          </div>
+
+          <div class="box1 card">
+            <p id="two">LAN (Local Area Network)</p>
+            <img src="assets/LAN-removebg-preview.png" height="100" alt="LAN Image">
+            <p id="one">Used in places like schools or offices to quickly connect devices within a limited area.</p>
+            <button>Learn More</button>
+          </div>
+
+          <div class="box1 card">
+            <p id="two">WAN (Wide Area Network)</p>
+            <img src="assets/WAN-removebg-preview.png" height="100" alt="WAN Image">
+            <p id="one">Covers large geographical areas, even across cities or countries—like the internet.</p>
+            <button>Learn More</button>
+          </div>
+        </div>
+
+        <div class="audio">
+          <audio controls>
+            <source src="assets/horse.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      </div>
     </section>
   </div>
 </body>
